--- a/environment.yml
+++ b/environment.yml
@@ -10,5 +10,6 @@ dependencies:
   - plotly
   - pip
   - pip:
-    - kaleido
+    - kaleido==0.1.0post1
     - dash_bootstrap_components
+    - nbformat
