--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: scenario_dashboard
+name: genesys-mod-plotter
 channels:
   - conda-forge
   - defaults
@@ -11,6 +11,5 @@ dependencies:
   - pip
   - pip:
     - kaleido==0.1.0post1
-    - dash_bootstrap_components
     - nbformat
     - openpyxl
